--- a/public/css/header.css
+++ b/public/css/header.css
@@ -16,6 +16,9 @@
 	}
 }
 
+html {
+    overflow-y: scroll;
+}
 
 body {
 	background-color: #FFFFFF;
